--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
 .banner {
     width: 100%;
     height: 500px;
-    background-image: url("banner.jpg");
+    background-image: url("resources/banner.jpeg");
     background-size: cover;
     background-position: center;
 }
