--- a/style.css
+++ b/style.css
@@ -84,6 +84,12 @@ body {
     object-fit: contain;
 }
 
+.card img {
+    width: 250px;
+    height: 250px;
+    object-fit: contain;
+}
+
 .products .card h3 {
     font-size: 24px;
     margin-top: 10px;
