--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
 
 .nav ul li {
     margin-left: 20px;
+    margin-bottom: 5px;
 }
 
 .nav ul li a {
@@ -45,9 +46,11 @@ body {
 .banner {
     width: 100%;
     height: 500px;
-    background-image: url("resources/banner-removebg-preview.png");
+    background-image: url("resources/banner.jpeg");
     background-size: cover;
     background-position: center;
+    text-align: center;
+    color: white;
 }
 
 .banner h1 {
@@ -88,6 +91,11 @@ body {
     width: 250px;
     height: 250px;
     object-fit: contain;
+}
+
+.card {
+    margin: 20px;
+    max-width: 450px;
 }
 
 .products .card h3 {
