--- a/resources/style.css
+++ b/resources/style.css
@@ -55,7 +55,7 @@ body {
 .banner {
     width: 100%;
     height: 500px;
-    background-image: url("resources/banner.jpeg");
+    background-image: url("banner.jpeg");
     background-size: cover;
     background-position: center;
     text-align: center;
